fix padding around comments box on mobile

--- a/app/styles/responsive.less
+++ b/app/styles/responsive.less
@@ -207,8 +207,7 @@
 	}
 
 	#comments {
-		margin-left: 20px;
-		margin-right: 20px;
+		margin: 20px 20px 40px 20px;
 		padding-top: 20px;
 		padding-bottom: 20px;
 		h4 { padding: 0; font-size: 0.8em; }
